--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -222,7 +222,7 @@ In response to our question of how participants would plan a large social event,
 
 \subsubsection{Summary of Findings}
 
-All of the participants used multiple web sites in order to complete their tasks, and all felt that the lack of existing integration between sites hindered their ability to make informed choices. Participants prioritised the sources they used by both the ease and immediacy of accessing them.  As a result, sources that took much effort or time to investigate were often excluded.
+All of the participants used multiple websites in order to complete their tasks, and all felt that the lack of existing integration between sites hindered their ability to make informed choices. Participants prioritised the sources they used by both the ease and immediacy of accessing them.  As a result, sources that took much effort or time to investigate were often excluded.
 
 % details of their decision making process were excluded because participants felt it was too much effort to investigate them. % Participants felt that they did not include particular aspects of a decision because the process to investigate them would be too difficult or take too much time. 
 
@@ -364,7 +364,7 @@ To test these hypotheses, we designed a within-subjects (repeated measures) cont
 
 The participants were seated at a standard OS X desktop equipped with a 22-inch monitor with a standard keyboard and mouse. Each participant was given a maximum of 10 minutes to complete each of two tasks, but were told that if they finished early, they could inform us and move on to the next condition.  Prior to the A condition trials, participants were trained on how to use DP using a five-minute instructional video.
 
-In the control (B) condition trials, participants were given a web browser with tabs open to all of the data sources they were provided for use, as well as a spreadsheet containing the data taken from web sites pertaining to the candidates they were asked to choose from. Participants were told they were free to use the web sites and spreadsheets however they wished. 
+In the control (B) condition trials, participants were given a web browser with tabs open to all of the data sources they were provided for use, as well as a spreadsheet containing the data taken from websites pertaining to the candidates they were asked to choose from. Participants were told they were free to use the websites and spreadsheets however they wished. 
 
 % why? why were these tasks selected? can we drop in the phrase ``multi-dimensional subjective choice task'' and refer back to PS.1 to justify the choice of tasks?
 
@@ -404,7 +404,7 @@ After the studies were complete, we generated transcripts of comments made by pa
 
 \subsection{Participant Recruitment}
 
-We recruited participants through adverts posted near the Southampton University campus and via e-mails to student mailing lists.  We screened participants to ensure they were at least 18 years of age, but did not filter candidates based on any other criteria.  We received 26 responses to our call, from which we accepted the first 20 applicants (10 of whom were female). Seven were non-students, comprised of university staff and alumni; the remainder were students, 8 studying computer science, and 5 studying other subjects.  Due to the large population of international students and staff at our university, we ended up with a large sample (12) of non-native English speakers; however, since all had passed requisite proficiency tests, we did not think this would substantially impact results.  On average, each study took 40 minutes to complete.  Participants were offered a small gift certificate from an online retailer for their time. 
+We recruited participants through adverts posted near the Southampton University campus and via e-mails to student mailing lists.  We screened participants to ensure they were at least 18 years of age, but did not filter candidates based on any other criteria.  We received 26 responses to our call, from which we accepted the first 20 applicants (10 of whom were female). Seven were non-students, comprised of university staff and alumni; the remainder were students, 8 studying computer science, and 5 studying other subjects.  Due to the large population of international students and staff at our university, we ended up with a large sample (12) of non-native English speakers; however, since all had passed requisite proficiency tests, we did not think this would substantially impact the results.  On average, each study took 40 minutes to complete, after which participants were offered a small gift certificate from an online retailer for their time. 
 
 %\subsection{Data Analysis} 
 
@@ -461,10 +461,10 @@ The following four sections describe the metrics we used to measure task perform
 Participants spent an average of 8.9 minutes performing the tasks. Condition A (DP) took slightly less time ($M=8.7$min, $SD=1.79$) per trial than condition B ($M=9.0$min; $SD=1.44$); however, a 2-way repeated measures ANOVA test of time taken by interface condition, blocked by participant ID, revealed that interface condition did not have a significant effect on task completion time.  This analysis also showed no significant effect of participant ID on task completion.  Comparing tasks, the restaurant selection task took on average slightly less time ($M=8.8$min,$SD=1.58$) than the university trials ($M=8.9$min,$SD=1.66$), but this difference was not significant. 
 
 \subsubsection{Thoroughness: Factors weighed in final choice}
-The second metric was the number of factors the participant considered in making their final choice. To determine this, we asked participants to explain why they made their choice(s), and recorded the number of distinct data dimensions mentioned.  A 2-way ANOVA test of the effect of interface and participant ID on the number of factors mentioned revealed a significant effect; post-hoc analysis with Tukey-Scheff\'{e} adjustments indicated that participants in the DP condition mentioned significantly more factors ($M=5.5; SD=1.7$) than those in the control condition ($M=4; SD=1.73$), $F(1,19)=3.95; p<0.10$. A strong significant effect was also observed between participant ID and number of dimensions mentioned, meaning some participants mentioned significantly more factors than others ($F(19,19)=4.53; p < 0.001$).
+The second metric related to the number of factors each participant considered in making his or her final choice. To determine this, we asked participants to explain why they made their choice(s), and recorded the number of distinct data dimensions mentioned.  A 2-way ANOVA test of the effect of interface and participant ID on the number of factors mentioned revealed a significant effect; post-hoc analysis with Tukey-Scheff\'{e} adjustments indicated that participants in the DP condition mentioned significantly more factors ($M=5.5; SD=1.7$) than those in the control condition ($M=4; SD=1.73$), $F(1,19)=3.95; p<0.10$. A strong significant effect was also observed between participant ID and number of dimensions mentioned, meaning some participants mentioned significantly more factors than others ($F(19,19)=4.53; p < 0.001$).
 
 \subsubsection{Diversity: Data sources consulted}
-The third metric we used to gauge the task performance is the number of different data sources consulted during the trial; our rationale for this metric was that more informed decisions derived from more thorough consideration of available data. In this metric, participants used an average of 88\% ($SD=0.13$) of data sources provided in the DP case, compared to 80\% ($SD=0.18$) in the control condition, although an ANOVA test blocking on participant demonstrated that interface choice only approached significance ($F(1,19)=0.04$ $p < 0.15$).
+The third metric we employed to gauge the task performance was the number of different data sources consulted during the trial; our rationale for this metric was that more informed decisions derived from more thorough consideration of available data. In this metric, participants used an average of 88\% ($SD=0.13$) of data sources provided in the DP case, compared to 80\% ($SD=0.18$) in the control condition, although an ANOVA test blocking on participant ID demonstrated that interface choice only approached significance ($F(1,19)=0.04$ $p < 0.15$).
 
 \subsubsection{Effort: External cognition}
 Although we did not have an explicit measure of effort for this experiment (such as NASA's TLX \cite{tlx}) the use of paper notes provided an indicator of how much information participants had to keep track of during the study.  We found that participants took notes less on average (25\%) with the DP interface than the standard interface (35\%), a difference which approached significance in a 2-way ANOVA blocked by participant ID ($F(1,19)= 8.22; p\approx0.10$).
@@ -478,28 +478,28 @@ Although we did not have an explicit measure of effort for this experiment (such
 \end{figure}
 
 \subsubsection{Candidate selection}
-Since the tasks were subjective-choice, we could not evaluate the `correctness' of answers.  However, to determine whether there was a difference in variability of answers between interface conditions, we plotted their choice on a histogram for each trial, per task and dataset for both conditions, visible in Figure \ref{fig:chosen_results}.  As can be seen there is considerable variability and no discernible difference in variability between conditions.  
+Since the tasks were subjective-choice, we could not evaluate the `correctness' of answers.  However, to determine whether there was a difference in variability of answers between interface conditions, we plotted the choices on a histogram for each trial, per task and dataset for both conditions, visible in Figure \ref{fig:chosen_results}.  As can be seen, there was less agreement among universities than restaurants, although little agreement overall in both conditions. This is likely due to the many subjective factors involved in such choice tasks.
 
 \subsection{Strategies: Successive Elimination vs Tallying}
-As described in later this section, we noticed several different strategies people used to evaluate each candidate selection. One common strategy was \emph{successive elimination} - to look at a single dimension at a time, starting with the most important, ruling out candidates that did not meet the required minimum for that value.  However, when there is no clear ``most important'' aspect, this  ``greedy-style'' can result in suboptimal decisions.  Another strategy, which we called \emph{tallying the pros and cons}, kept all candidates around, and counted up the advantages and disadvantages of each, potentially weighing each factor by its perceived importance.  This strategy is less vulnerable to getting stuck in local maxima than the former.
+As described later in this section, we noticed several different strategies the participants used to evaluate each candidate selection. One common strategy was \emph{successive elimination}, that is, to regard a single dimension or factor at a time, starting with the most important, and ruling out candidates not meeting the minimum requirements for that value.  However, when there was no clear aspect that was ``most important'', this  ``greedy'' strategy can result in suboptimal decisions.  Another tactic, which we called \emph{tallying the pros and cons}, was to consider all candidate choices together, totaling up the advantages and disadvantages of each, potentially weighed by its perceived importance.  This strategy was less vulnerable to getting stuck in local maxima than the former.
 
-To understand whether the interface influenced choice of strategy, we measured the number of candidates the participant considered \emph{at final result}.  This is a strong marker for use of each strategy; people using the successive elimination strategy arrived with only 1--2 candidates at decision time, while those that tallied still maintained the entire starting set.\looseness=-1
+To understand whether the interface influenced the choice of strategy, we measured the number of candidates the participant considered at their final choice.  This was a strong marker for use of each strategy; people who used the successive elimination strategy arrived with only 1--2 candidates at decision time, while those that tallied still maintained the entire starting set.\looseness=-1
 
 We found that the use of DP strongly influenced people to keep all candidates around, while participants in the B condition eliminated choices early.  An ANOVA test demonstrated a significant effect between condition and number of candidates maintained; a post-hoc analysis with Tukey-Scheff\'{e} adjustments confirmed that the number of candidates used in the final choice for participants in the DP condition was greater ($M=5.85;SD=0.45$) than the control condition ($M=4.95; SD=2.26$) $F(1,19)=5.323; p<0.05$.
 
-\subsection{Use of Data Integration Features}
+\subsection{Condition A: Use of Data Integration Features}
 
-To determine whether participants used the data integration features of DP, we looked at use of the \emph{multi-path selection} and \emph{Same-As} features of the system.   Pertaining to path selection, all participants readily used the path selection process to select values.   Five participants (25\%) deliberately used multi-path selection, defined as selecting more than one active path per group at the same time to display common values across heterogeneous items. (We did not count accidental use of multi-path, such as happened a few times when a participant had an already active path and wanted to switch to a separate path accidentally).
+To determine whether participants used the data integration features of DP, we looked at use of the \emph{multi-path selection} and \emph{Same-As} features of the system.   Pertaining to path selection, all participants readily used the path selection process to select values.   Five participants (25\%) deliberately used multi-path selection, defined as selecting more than one active path per group at the same time to display common values across heterogeneous items. (We did not take into account accidental uses of multi-path, such as when a participant had an already active path and wanted to switch to a separate path accidentally).
 
 Participants used the drag-and-drop \emph{Same-As} capability extensively. Sixteen (80\%) used \emph{Same-As} as least once; among these participants, they used \emph{Same-As} an average of 4.6 times per trial. We counted a single ``use'' as a single drag-and-drop of an individual item, or a drag-and-drop operation of an entire group onto another (we did not differentiate enumerated value consolidation from entity consolidation, as these are not discernibly different from the interface perspective).\looseness=-1
 
 % we examined use on performance but nothing significant was found :/
 
 \subsection{Use of Visualisation Features}
-To determine to what extent visualisation tools were used in condition A, 13 (65\%) used charting tools at least once, while a majority (15, 75\%) used the map.  Determining the impact these had on performance, we performed a multiple regression on time taken with the number of uses of charting and mapping as variables.   We found significant effects of both charting and mapping variables on time taken, ($R^2_{adj} = 0.04; F(2,17)=3.79; p<0.05$), with coefficients ($Y_0=8.91;\beta_{charts}=0.49;\beta_{maps}=-1.05$) demonstrating that charting positively influenced time taken, while the use of maps led to shorter times.
+In our determination of the extent to which visualisation tools were used in condition A, 13 (65\%) used charting tools at least once, while a majority (15, 75\%) used the map.  To assess the impact use of these features had on performance, we carried out a multiple regression on the time taken, with the number of uses of charting and mapping as variables.  We found significant effects of both charting and mapping variables on time taken, ($R^2_{adj} = 0.04; F(2,17)=3.79; p<0.05$), with coefficients ($Y_0=8.91;\beta_{charts}=0.49;\beta_{maps}=-1.05$) demonstrating that charting positively influenced time taken, while the use of maps led to shorter times.
 
 \subsection{Condition B: Results and Observations}
-Participants were given the option of using web sites and/or a spreadsheet to make their choices, using the same data as condition A. There was mixed use of websites and the spreadsheet, and we measured the fraction of the trial time spent in Excel versus looking at the sites in a 5-value range (0,25,50,75,100\%).  Six individuals used Excel entirely (100\%) without consulting the web sites, while one avoided Excel entirely. The uses of Excel for external cognition ranged from collation behaviour to tallying annotations, to colour-coding cells to allow easy identification of  ``pros'' and ``cons''. In general, users struggled with both the websites and with the spreadsheet, although could generally find the information they required after a short period of frustration. 
+In condition B, participants were given the option of using websites and/or a spreadsheet containing the same data as condition A, to make their choices.  A mixed usage of websites and the spreadsheet was observed, and we measured the fraction of the trial time spent in Excel versus looking at the sites in a 5-value range (0,25,50,75,100\%).  Six individuals used Excel entirely (100\%) without consulting the websites, while one avoided Excel entirely. The uses of Excel for external cognition ranged from collation behaviour, to tallying annotations, to colour-coding cells for making easier the identification of  ``pros'' and ``cons''. In general, users struggled with both the websites and with the spreadsheet, although they could usually find the information they required after a short period of frustration. 
 
 
 
@@ -527,31 +527,33 @@ Participants were given the option of using web sites and/or a spreadsheet to ma
 \end{center}
 \end{figure}
 
-When asked to rate the DP interface, all participants responded that they felt they understood the system, with sixteen (80\%) responding that they agreed \emph{very strongly}.  Eighteen (90\%) reported that they thought  DP was \emph{easy}, as well as \emph{useful}, with one person being neutral on each.  On the statement ``DP is confusing'',  11 strongly disagreed, 6 disagreed, and 3 agreed.  Revisiting the time trials, we discovered that the 3 participants who rated DP as confusing completed the trials statistically significantly slower than the rest of the group. Survey results were visualised in Figure \ref{fig:survey}.
+When asked to rate the DP interface in the exit survey, all participants responded that they felt they understood the system, with sixteen out of the twenty participants (80\%) responding that they agreed \emph{very strongly} that they felt they understood it.  Eighteen (90\%) reported that they thought  DP was \emph{easy}, as well as \emph{useful}, with one person being neutral on each.  As to the statement ``DP is confusing'',  11 (55\%) strongly disagreed, 6 (30\%) disagreed, and 3 (15\%) agreed.  On reviewing the time trials, we discovered that the 3 participants who rated DP as confusing completed the trials significantly more slowly than the rest of the group. The survey results were visualised in Figure \ref{fig:survey}.
+
+% (ANOVA?)
 
 %+What did people think about it? 
 % Usefulness,Ease,Confusion,etc
 
-In the exit survey, the users noted that they would use an interface like DataPalette in the future, for finding a property to rent/buy, choosing a job and purchasing electronic devices.  However, one participant said that they would not use it for things like deciding on a restaurant because ``it would cheapen the experience'' by removing the element of spontaneity of choice, but would use it for making more important decisions.  In order to improve our solutions the participants suggested making the origin of the information clearer, particularly when combining multiple data sources. The participants also requested the ability to sort instances, as well as explanations of ratings and scoring systems (however some of these are not even transparent on websites). Participants also requested standard features not present in our prototype, such as window management options (specifically, arranging and minimising windows), and the ability to undo operations.
+The users also noted that they would use an interface like DataPalette in the future, for example, in finding a property to rent/buy, in choosing a job and for purchasing electronic devices.  Interestingly, one participant indicated that he/she would not use it for decisions such as selecting a restaurant, because ``it would cheapen the experience'' by removing the element of spontaneity of choice; they would use it, however, for making more ``important'' decisions.  As for ways to improve DP, the participants suggested making the origin of the information clearer, particularly when combining multiple data sources. The participants also requested the ability to sort instances, as well as explanations of ratings and scoring systems (however some of these are not even transparent on websites). Participants also requested standard features not present in our prototype, such as window management options (specifically, arranging and minimising windows), and the ability to undo operations.
 
 \section{Discussion and Limitations}
-
-In this section, we first re-visit our study hypotheses introduced in Methodology, using observations from results to support views on each.  We follow this with a discussion of limitations regarding the design of the interface, the state of the prototype, and the design and execution of the study.  Finally, we discuss our current and follow-on plans for continuing this line of research.
+In this section, we first revisit the three hypotheses introduced in Methodology, incorporating observations from the study's results to support views on each.  We follow this with a discussion of the limitations regarding the design of the interface, the state of the prototype, and the design and execution of the study.  Finally, we discuss our current and follow-on plans for continuing this line of research.
 
 \subsection{Does DataPalette enable data integration?}
-We set out to test three hypotheses with the DataPalette study. The first was that end-user citizens would understand the interface mechanisms of DP (h1).  The second, h2, was that DP enables people to mix and integrate heterogeneous data in the process of performing their tasks.  The third, h3, was that using DP facilitated task completion (h3).  Using real data obtained from typical data sources identified during our pre-study (PS.1), we tested the DP prototype and its integration interaction mechanisms with ``real'' users, who were students, staff and alumni of our University who had varying backgrounds and levels of expertise with computers.
+We set out to test three hypotheses with the DataPalette study. The first was that users would understand the interface mechanisms of DP (h1).  The second, h2, was that DP would enable people to mix and integrate heterogeneous data in the process of performing their tasks.  The third, h3, was that using DP would facilitate task completion.  
+% Using real data obtained from typical data sources identified during our pre-study (PS.1), we tested the DP prototype and its integration interaction mechanisms with ``real'' users, who were students, staff and alumni of our University who had varying backgrounds and levels of expertise with computers.
 
-We find substantial support for h1. All participants reported that they understood the tool, and that it was easy to use.   All participants managed to use the interface to view, organise and collate data without running into major roadblocks or confusion, and all effectively were able to compare multiple attributes of heterogeneous data items directly.  More than half of the participants used DP's visualisation features (charting or map) -- often several times during the trial -- suggesting that these features were useful and usable as well.  
+The study produced substantial support for h1. All participants reported that they understood the tool, and that it was easy to use.   All participants managed to use the interface to view, organise and collate data without running into major roadblocks or confusion, and all effectively were able to compare multiple attributes of heterogeneous data items directly.  More than half of the participants used DP's visualisation features (charting or map) -- often several times during the trial -- suggesting that these features were useful and usable as well.  
 
-Additional evidence that participants had a solid understanding of the system was their feedback, specifically feature requests and desired capabilities.  Several participants requested search functionality, sort and filter functionality, the ability to display multiple properties for a single instance simultaneously, and visualise multiple attributes in a 2 or 3-dimensional visualisation.  Perhaps the most interesting suggestion was also the most common -- the ability to selectively view the provenance of information after instances have been combined.  For example, after his trial, P15 said:
+Additional evidence that participants had a solid understanding of the system was reflected in their feedback, particularly in their requests for features and desired capabilities.  Several participants requested search functionality, sort and filter functionality, the ability to display multiple properties for a single instance simultaneously, and the ability to display multiple attributes together in a 2-or-3 dimensional visualisation.  Perhaps the most interesting suggestion was also the most common -- the ability to selectively view the provenance of information after instances were combined.  For example, after his trial, P15 said:
 
 \begin{quote}
 Properties are tricky. Sometimes you don't care [which data source] a property is from, like ``address'' or ``phone number'' - for these the way it's done now is fine. But in some cases you need context of where the properties come from in order to know what it really means - like for ``rating'', it makes a big difference whether you're talking about ``Yelp rating'' or some random reviewer's rating.  You also don't know what typical ratings are, whether 5 stars are much better than 4, etc.
 \end{quote}
 
-Pertaining to h2, all participants were able to work with multiple sets of heterogeneous data effectively.  With respect to integration specifically, a majority (80\%) of the participants successfully and deliberately integrated data using drag-and-drop SameAs capabilities.  While single-paths were used, multi-path features were not as widely used, only by 4 participants. We believe that participants may not have realised that creating multiple path selections per group was possible, instead assuming it to be similar to the single ``Current path'' state per window of most file managers. 
+Pertaining to h2, all participants were able to work with multiple sets of heterogeneous data effectively.  With respect to integration specifically, a majority (80\%) of the participants successfully and deliberately integrated data using drag-and-drop SameAs capabilities.  While single-paths were readily used, multi-path features were not as widely used (only by 4 participants). We believe that participants may not have realised that creating multiple path selections per group was possible, instead assuming it to be similar to the single ``Current path'' state per window of most file managers. 
 
-Assessing whether DP improved task performance (h3) was difficult given the small sample size of our study and large number of factors influencing each person's performance.  Tasks were completed on average slightly faster than the control interface, but not statistically significantly.  However, more data sources seemed to be consulted (we use ``seemed'' carefully because these findings approached significance) during trials with DP over the control interface, which meant that people were looking at more diverse information than the control conditions.  We also found that participants justified their choices with a greater number of factors in DP than the control interface, suggesting that decisions may have been made considering a greater number of factors.  Participants entertained more possibilities for longer in the DP trial, while participants were more prone to eliminate candidates early in the baseline interface.  Finally, people took fewer paper notes in the DP condition than the baseline, suggesting that there was less need for external cognitive support in DP.\looseness=-1
+Assessing whether or not DP improved task performance (h3) was difficult, given the small sample size of our study, and the large number of factors influencing each person's choice.  Tasks were completed on average slightly faster than the control interface, but not significantly.  However, more data sources seemed to be consulted (we use ``seemed'' carefully because these findings approached significance) during trials with DP over the control interface, which meant that participants were looking at more diverse information than the control conditions.  We also found that participants justified their choices with a greater number of factors in DP than the control interface, suggesting that decisions may have been made considering a greater number of factors.  Participants entertained more possibilities for longer in the DP trial, while participants were more prone to eliminate candidates early in the baseline interface.  Finally, people took fewer paper notes in the DP condition than the baseline, suggesting that there was less need for external cognitive support in DP.\looseness=-1
 
 %% -> discussion and limitations
 \subsection{Design Limitations}
