--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -553,12 +553,11 @@ Properties are tricky. Sometimes you don't care [which data source] a property i
 
 Pertaining to h2, all participants were able to work with multiple sets of heterogeneous data effectively.  With respect to integration specifically, a majority (80\%) of the participants successfully and deliberately integrated data using drag-and-drop SameAs capabilities.  While single-paths were readily used, multi-path features were not as widely used (only by 4 participants). We believe that participants may not have realised that creating multiple path selections per group was possible, instead assuming it to be similar to the single ``Current path'' state per window of most file managers. 
 
-Assessing whether or not DP improved task performance (h3) was difficult, given the small sample size of our study, and the large number of factors influencing each person's choice.  Tasks were completed on average slightly faster than the control interface, but not significantly.  However, more data sources seemed to be consulted (we use ``seemed'' carefully because these findings approached significance) during trials with DP over the control interface, which meant that participants were looking at more diverse information than the control conditions.  We also found that participants justified their choices with a greater number of factors in DP than the control interface, suggesting that decisions may have been made considering a greater number of factors.  Participants entertained more possibilities for longer in the DP trial, while participants were more prone to eliminate candidates early in the baseline interface.  Finally, people took fewer paper notes in the DP condition than the baseline, suggesting that there was less need for external cognitive support in DP.\looseness=-1
+Assessing whether or not DP improved task performance (h3) was difficult, given the small sample size of our study, and the large number of factors influencing each person's choice.  Tasks were completed on average slightly faster than the control interface, but not significantly.  However, more data sources seemed to be consulted (we use ``seemed'' carefully because these findings approached significance) during trials with DP over the control interface, which meant that participants were looking at more diverse information than the control conditions.  We also found that participants justified their choices with a greater number of factors in DP than with the control interface, suggesting that their decisions may have been made considering a greater number of factors.  Participants entertained more possibilities for longer in the DP trial, while they were more prone to eliminate candidates early in the baseline interface.  Finally, people took fewer paper notes in the DP condition than with the baseline, suggesting that there was less need for external cognitive support in DP.\looseness=-1
 
 %% -> discussion and limitations
 \subsection{Design Limitations}
-
-In addition to the aforementioned feature requests, we observed a number of ``pain points'' in the design of the DP interface.  One such pain point was window layout and screen real estate management; participants were prone to opening up a large number of windows, including maps and charts.  When their screen started to fill up, we found that participants spent a lot of time arranging windows, and second, that people tended to forget what each window represented -- ``what was this again?''.  We plan to address these issue in the next version of DataPalette.
+In addition to the aforementioned feature requests, we observed a number of potential areas for improvement in the design of the DP interface.  One such area pertained to window layout and screen real-estate management: participants were prone to opening up a large number of windows, including maps and charts.  When their workspaces started to fill up, we found that participants spent a lot of time arranging windows, and that they tended to forget what each window represented.  We plan to address these issues in the next version of DataPalette.
 
 A key design decision we made at the outset was to target only the most common forms of heterogeneity observed in PS.2.  To expand DP's integration capabilities, we are considering a number of new interaction affordances for facilitating field combination and splitting, and unit of measure reconciliation.  This would cover a majority of the structural and modeling-oriented heterogeneity cases observed in DP.2.  Extending the ``Do What I Mean'' capabilities of the visualisation features to be unit-of-measure-aware we think would be tremendously valuable; a core problem, however, stems from the fact that few sources explicitly annotated data values with such units.
 
