--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -559,11 +559,11 @@ Assessing whether or not DP improved task performance (h3) was difficult, given 
 \subsection{Design Limitations}
 In addition to the aforementioned feature requests, we observed a number of potential areas for improvement in the design of the DP interface.  One such area pertained to window layout and screen real-estate management: participants were prone to opening up a large number of windows, including maps and charts.  When their workspaces started to fill up, we found that participants spent a lot of time arranging windows, and that they tended to forget what each window represented.  We plan to address these issues in the next version of DataPalette.
 
-A key design decision we made at the outset was to target only the most common forms of heterogeneity observed in PS.2.  To expand DP's integration capabilities, we are considering a number of new interaction affordances for facilitating field combination and splitting, and unit of measure reconciliation.  This would cover a majority of the structural and modeling-oriented heterogeneity cases observed in DP.2.  Extending the ``Do What I Mean'' capabilities of the visualisation features to be unit-of-measure-aware we think would be tremendously valuable; a core problem, however, stems from the fact that few sources explicitly annotated data values with such units.
+A key design decision we made at the outset was to target only the most common forms of heterogeneity observed in PS.2.  To expand DP's integration capabilities, we are considering a number of new interaction affordances for facilitating field combination and splitting, and unit of measure reconciliation.  This would cover a majority of the structural and modeling-oriented heterogeneity cases observed in DP.2.  Extending the ``Do What I Mean'' capabilities of the visualisation features to be unit-of-measure-aware, we believe, would be valuable to users.  A core problem with realizing such an capability, however, is that few sources explicitly annotated data values with measurement units.
 
 \subsection{Study Limitations}
 
-Our study had several limitations.  First, the small sample size of our study (20 participants) meant that we could not confirm some of the effects observed with statistical significance.  Second, giving participants a time limit of 10 minutes on trials may have affected the strategies they used to make their choices.  For this reason, in our follow-up study, we will give some participants unlimited time on tasks of similar complexity.  A second departure from a realistic task was the way in which we pre-determined the data sources for participants to use.  We did this in order to focus participants' efforts on looking at and working with their choices, rather than retrieving them.  However, as supporting effective retrieval and serendipitous discovery will be important for DP to be useful in practice, we plan to look at supporting these stages in the future. 
+Concerning limitations of the study, the small sample size of our study (20 participants) meant that we could not confirm some of the effects observed with statistical significance.  Second, providing participants a time limit of 10 minutes on trials may have affected the strategies they used to make their choices.  For this reason, in our follow-up study, we will give participants a greater amount of time for tasks of similar complexity.  A departure from realistic tasks was the way in which we pre-determined the data sources for participants to use.  We did this in order to focus participants' efforts on looking at and working with their choices, rather than retrieving them.  However, as supporting effective retrieval and serendipitous discovery will be important for DP to be useful in practice, we plan to look at supporting these stages in the future. 
 
 % \subsection{Integration Limitations}
 % In the A condition, where participants used DataPalette to complete their tasks, they used it to collate the data on-screen, and compare multiple values directly. About half of the observed users actually used the instance combination feature of DataPalette, with the other half able to successfully make decisions without using it. Those who tried to use it were largely successful, and were able to therefore use the global brush-highlighting to simultaneously compare different statistics. Most users instantly opened up all data sources into individual boxes, in order to determine which sources contained specific statistics. The result of this technique is that the users instantly filled their screen, and ran out of space for plots and maps.
